[package]
name = "ytdl-lib"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]

[dependencies]
serde = "1.0.66"
serde_json = "1.0.22"
serde_derive = "1.0.66"
json = "0.11.13"
bytes = "0.4.8"
log = "0.4.2"
reqwest = "0.8.6"
url = "1.7.0"
regex = "1.0.0"
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "1.0.1"