[package]
name = "ytdl-lib"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.82"
serde_json = "1.0.33"
serde_derive = "1.0.82"
json = "0.11.13"
bytes = "0.4.11"
log = "0.4.6"
reqwest = "0.9.5"
url = "1.7.2"
regex = "1.1.0"
failure = "0.1.3"
failure_derive = "0.1.3"
lazy_static = "1.2.0"