[package]
name = "ytdl-server"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]

[dependencies]
ytdl-lib = { path = "../ytdl-lib" }
reqwest = "0.8.6"
serde = "1.0.66"
serde_json = "1.0.22"
serde_derive = "1.0.66"
json = "0.11.13"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.2"
env_logger = "0.5.10"
hyper = "0.12.4"
futures = "0.1.21"
url = "1.7.0"
regex = "1.0.0"
lazy_static = "1.0.1"